# nix-flake-pandas-spacy

./: flake.nix  pyproject.toml
